<resources>
    <string name="app_name">电影天堂</string>

    <!--FragmentTabHost的四个标签-->
    <string name="main_tab__name_recommend">推荐</string>
    <string name="main_tab__name_classify">分类</string>
    <string name="main_tab__name_discover">发现</string>
    <string name="main_tab__name_my">我的</string>

    <!--加载页面显示的文字-->
    <string name="error_view_no_data">暂无内容</string>
    <string name="error_view_load_error_click_to_refresh">内容加载失败\r\n点击重新加载</string>
    <string name="error_view_network_error_click_to_refresh">网络异常\r\n点击重新加载</string>

    <string name="search_hint">搜索电影、电视剧、动漫</string>

    <string name="loading">正在加载中...</string>
    <string name="update">检查更新</string>
    <string name="grade">去评分</string>
    <string name="oscsite">官网</string>
    <string name="knowmore">了解更多</string>
    <string name="copyright">声明：软件仅供学习和研究使用,电影资料均为软件作者解析某网站而来，请在下载后24小时内删除。如有侵犯版权,请联系QQ:851149892</string>
    <string name="str_feedback_error">程序错误</string>
    <string name="str_feedback_function">功能建议</string>
    <string name="str_feedback_et_hint">我们将为您不断改进</string>
    <string name="str_feedback_contact">截图描述：（可选）</string>
    <string name="str_feedback_tip">我们会仔细阅读您的反馈，并尽早给您回复。感谢您的理解与支持。</string>
    <string name="title_discover">发现</string>
    <string name="title_my_info">我的信息</string>

    <string-array name="classify_indicator_names">
        <item>动作</item>
        <item>恐怖</item>
        <item>科幻</item>
        <item>喜剧</item>
        <item>剧情</item>
        <item>爱情</item>
        <item>动画</item>
        <item>悬疑</item>
        <item>惊悚</item>
        <item>战争</item>
        <item>犯罪</item>
    </string-array>
    <string-array name="recommend_sub_names">
        <item>新片精品</item>
        <item>必看热片</item>
        <item>迅雷电影</item>
        <item>经典大片</item>
    </string-array>
    <string-array name="recommend_indicator_names">
        <item>推荐</item>
        <item>最新</item>
        <item>最热</item>
        <item>经典</item>
    </string-array>
</resources>
